# diaranks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backup.py  bot.py  config-template.toml  config-template.yaml  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  schema.sql  settings_template.py
.github/workflows/: lint_and_check.yaml
cogs/: errors.py  etc.py  help.py  listener.py  management.py  misc.py  moderator.py  owner.py  ranks.py
db/: Dockerfile  schema.sql
utils/: CustomBot.py  __init__.py  bot.py  config.py  context.py  help.py  levels.py  placard.py  utils.py
