[tool.poetry]
name = "ranks-bot"
version = "0.1.0"
description = "A rank bot for discord.gg/diabetes"
authors = ["ImVaskel <49348256+ImVaskel@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.7.4.post0"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
asyncpg = "^0.25.0"
psutil = "^5.8.0"
discord-ext-menus = {git = "https://github.com/rapptz/discord-ext-menus"}
discord-ext-menus-views = {git = "https://github.com/oliver-ni/discord-ext-menus-views"}
"discord.py" = {git = "https://github.com/rapptz/discord.py"}
PyYAML = "^6.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[tool.poetry.extras]
aiohttp = ["speedups"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
